--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "hancomee",
+  "name": "shopping",
   "version": "1.0.0",
-  "description": "work",
+  "description": "hancomee",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "hancomee",
+  "author": "hellofunc",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "@types/jquery": "^2.0.48",
-    "angular": "^1.6.4",
+    "babel-loader": "^8.1.0",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.5",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
     "html-es6-template-loader": "^1.0.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^2.2.4",
     "node-sass": "^4.14.1",
     "postcss-loader": "^2.0.6",
     "reflect-metadata": "^0.1.10",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "ts-loader": "^2.3.3",
-    "typescript": "^2.6.2",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.5.5",
-    "webpack-typescript": "^0.5.6"
+    "ts-loader": "^8.0.6",
+    "typescript": "^4.0.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.1.0",
+    "webpack-typescript": "^0.5.6",
+    "popper.js": "^1.16.1"
   },
   "dependencies": {
     "@types/es6-promise": "0.0.33",
